--- a/Dataframes.ipynb
+++ b/Dataframes.ipynb
@@ -2467,6 +2467,143 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Expanded lists of keywords for Events and Offers\n",
+    "events_keywords = [\n",
+    "    \"show\", \"concert\", \"parade\", \"fireworks\", \"festival\", \"night\", \"celebration\",\n",
+    "    \"performance\", \"meet and greet\", \"magic show\", \"dinner show\", \"theme night\",\n",
+    "    \"character breakfast\", \"Halloween\", \"Christmas\", \"Easter\", \"summer nights\",\n",
+    "    \"live entertainment\", \"seasonal event\", \"autumn fest\", \"winter wonderland\",\n",
+    "    \"spring break\", \"character parade\", \"music festival\", \"carnival\", \"horror night\",\n",
+    "    \"family fun day\", \"superhero weekend\", \"princess day\", \"pyrotechnics\", \"theater show\",\n",
+    "    \"animal encounter\", \"educational tour\", \"VIP event\", \"special performance\",\n",
+    "    \"anniversary event\", \"new year's eve\", \"special celebration\", \"exclusive event\",\n",
+    "    \"fan meet-up\"\n",
+    "]\n",
+    " \n",
+    "offers_keywords = [\n",
+    "    \"discount\", \"sale\", \"offer\", \"deal\", \"promotion\", \"early bird\", \"season pass\",\n",
+    "    \"family pack\", \"group rate\", \"flash sale\", \"special admission\", \"free entry\",\n",
+    "    \"buy one get one\", \"limited time offer\", \"exclusive access\", \"online booking discount\",\n",
+    "    \"ticket special\", \"membership discount\", \"upgrade promotion\", \"multi-day pass\",\n",
+    "    \"annual pass\", \"online discount\", \"kids go free\", \"holiday special\", \"weekend sale\",\n",
+    "    \"gift card offer\", \"last-minute deal\", \"early booking bonus\", \"companion discount\",\n",
+    "    \"birthday offer\", \"return visitor discount\", \"meal deal\", \"souvenir discount\",\n",
+    "    \"photo package deal\", \"stay and play\", \"hotel package\", \"resort special\",\n",
+    "    \"VIP package\", \"express pass deal\"\n",
+    "]\n",
+    " \n",
+    "# Function to check if any of the keywords appear in the text\n",
+    "def classify_text(text, keywords):\n",
+    "    if pd.isnull(text):  # Check if the text is NaN\n",
+    "        return 0\n",
+    "    text = text.lower()  # Convert text to lower case for comparison\n",
+    "    for keyword in keywords:\n",
+    "        if keyword in text:\n",
+    "            return 1\n",
+    "    return 0\n",
+    " \n",
+    "# Apply the classification function to the dataset\n",
+    "merged_df['Event'] = merged_df['Message'].apply(lambda x: classify_text(x, events_keywords))\n",
+    "merged_df['Discount'] = merged_df['Message'].apply(lambda x: classify_text(x, offers_keywords))\n",
+    " \n",
+    "# Display the first few rows of the updated dataframe\n",
+    "merged_df.head()\n",
+    "# Expanded lists of keywords for Events and... door Patrick Nasr-Alla\n",
+    "Patrick Nasr-Alla\n",
+    "11:02\n",
+    "# Expanded lists of keywords for Events and Offers\n",
+    "events_keywords = [\n",
+    "    \"show\", \"concert\", \"parade\", \"fireworks\", \"festival\", \"night\", \"celebration\",\n",
+    "    \"performance\", \"meet and greet\", \"magic show\", \"dinner show\", \"theme night\",\n",
+    "    \"character breakfast\", \"Halloween\", \"Christmas\", \"Easter\", \"summer nights\",\n",
+    "    \"live entertainment\", \"seasonal event\", \"autumn fest\", \"winter wonderland\",\n",
+    "    \"spring break\", \"character parade\", \"music festival\", \"carnival\", \"horror night\",\n",
+    "    \"family fun day\", \"superhero weekend\", \"princess day\", \"pyrotechnics\", \"theater show\",\n",
+    "    \"animal encounter\", \"educational tour\", \"VIP event\", \"special performance\",\n",
+    "    \"anniversary event\", \"new year's eve\", \"special celebration\", \"exclusive event\",\n",
+    "    \"fan meet-up\"\n",
+    "]\n",
+    " \n",
+    "offers_keywords = [\n",
+    "    \"discount\", \"sale\", \"offer\", \"deal\", \"promotion\", \"early bird\", \"season pass\",\n",
+    "    \"family pack\", \"group rate\", \"flash sale\", \"special admission\", \"free entry\",\n",
+    "    \"buy one get one\", \"limited time offer\", \"exclusive access\", \"online booking discount\",\n",
+    "    \"ticket special\", \"membership discount\", \"upgrade promotion\", \"multi-day pass\",\n",
+    "    \"annual pass\", \"online discount\", \"kids go free\", \"holiday special\", \"weekend sale\",\n",
+    "    \"gift card offer\", \"last-minute deal\", \"early booking bonus\", \"companion discount\",\n",
+    "    \"birthday offer\", \"return visitor discount\", \"meal deal\", \"souvenir discount\",\n",
+    "    \"photo package deal\", \"stay and play\", \"hotel package\", \"resort special\",\n",
+    "    \"VIP package\", \"express pass deal\"\n",
+    "]\n",
+    " \n",
+    "# Function to check if any of the keywords appear in the text\n",
+    "def classify_text(text, keywords):\n",
+    "    if pd.isnull(text):  # Check if the text is NaN\n",
+    "        return 0\n",
+    "    text = text.lower()  # Convert text to lower case for comparison\n",
+    "    for keyword in keywords:\n",
+    "        if keyword in text:\n",
+    "            return 1\n",
+    "    return 0\n",
+    " \n",
+    "# Apply the classification function to the dataset\n",
+    "merged_df['Event'] = merged_df['Message'].apply(lambda x: classify_text(x, events_keywords))\n",
+    "merged_df['Discount'] = merged_df['Message'].apply(lambda x: classify_text(x, offers_keywords))\n",
+    " \n",
+    "# Display the first few rows of the updated dataframe\n",
+    "merged_df.head()\n",
+    "# Expanded lists of keywords for Events and... door Patrick Nasr-Alla\n",
+    "Patrick Nasr-Alla\n",
+    "11:02\n",
+    "# Expanded lists of keywords for Events and Offers\n",
+    "events_keywords = [\n",
+    "    \"show\", \"concert\", \"parade\", \"fireworks\", \"festival\", \"night\", \"celebration\",\n",
+    "    \"performance\", \"meet and greet\", \"magic show\", \"dinner show\", \"theme night\",\n",
+    "    \"character breakfast\", \"Halloween\", \"Christmas\", \"Easter\", \"summer nights\",\n",
+    "    \"live entertainment\", \"seasonal event\", \"autumn fest\", \"winter wonderland\",\n",
+    "    \"spring break\", \"character parade\", \"music festival\", \"carnival\", \"horror night\",\n",
+    "    \"family fun day\", \"superhero weekend\", \"princess day\", \"pyrotechnics\", \"theater show\",\n",
+    "    \"animal encounter\", \"educational tour\", \"VIP event\", \"special performance\",\n",
+    "    \"anniversary event\", \"new year's eve\", \"special celebration\", \"exclusive event\",\n",
+    "    \"fan meet-up\"\n",
+    "]\n",
+    " \n",
+    "offers_keywords = [\n",
+    "    \"discount\", \"sale\", \"offer\", \"deal\", \"promotion\", \"early bird\", \"season pass\",\n",
+    "    \"family pack\", \"group rate\", \"flash sale\", \"special admission\", \"free entry\",\n",
+    "    \"buy one get one\", \"limited time offer\", \"exclusive access\", \"online booking discount\",\n",
+    "    \"ticket special\", \"membership discount\", \"upgrade promotion\", \"multi-day pass\",\n",
+    "    \"annual pass\", \"online discount\", \"kids go free\", \"holiday special\", \"weekend sale\",\n",
+    "    \"gift card offer\", \"last-minute deal\", \"early booking bonus\", \"companion discount\",\n",
+    "    \"birthday offer\", \"return visitor discount\", \"meal deal\", \"souvenir discount\",\n",
+    "    \"photo package deal\", \"stay and play\", \"hotel package\", \"resort special\",\n",
+    "    \"VIP package\", \"express pass deal\"\n",
+    "]\n",
+    " \n",
+    "# Function to check if any of the keywords appear in the text\n",
+    "def classify_text(text, keywords):\n",
+    "    if pd.isnull(text):  # Check if the text is NaN\n",
+    "        return 0\n",
+    "    text = text.lower()  # Convert text to lower case for comparison\n",
+    "    for keyword in keywords:\n",
+    "        if keyword in text:\n",
+    "            return 1\n",
+    "    return 0\n",
+    " \n",
+    "# Apply the classification function to the dataset\n",
+    "merged_df['Event'] = merged_df['Message'].apply(lambda x: classify_text(x, events_keywords))\n",
+    "merged_df['Discount'] = merged_df['Message'].apply(lambda x: classify_text(x, offers_keywords))\n",
+    " \n",
+    "# Display the first few rows of the updated dataframe\n",
+    "merged_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "output_file_path = '/Users/owenalberts/Downloads/dataframes.xlsx'  # Replace with the desired file path\n",
     "\n",
     "# Save the DataFrame to an Excel file\n",
