--- a/Dataframes.ipynb
+++ b/Dataframes.ipynb
@@ -1824,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1846,6 +1846,35 @@
     "\n",
     "stat, p = kruskal(scores_morning, scores_afternoon, scores_evening)\n",
     "print(f\"Kruskal-Wallis H Test: Statistic={stat}, p-value={p}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kruskal-Wallis H Test: Statistic=23.7108096263238, p-value=0.0005902345562124145\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import kruskal\n",
+    "\n",
+    "# Example: Comparing engagement scores across three parts of the day\n",
+    "scores_monday = merged_df[merged_df['Day of Week'] == 0]['Unweighted_Engagement_Score'].dropna()\n",
+    "scores_tuesday = merged_df[merged_df['Day of Week'] == 1]['Unweighted_Engagement_Score'].dropna()\n",
+    "scores_wensday = merged_df[merged_df['Day of Week'] == 2]['Unweighted_Engagement_Score'].dropna()\n",
+    "scores_tursday = merged_df[merged_df['Day of Week'] == 3]['Unweighted_Engagement_Score'].dropna()\n",
+    "scores_friday = merged_df[merged_df['Day of Week'] == 4]['Unweighted_Engagement_Score'].dropna()\n",
+    "scores_saturday = merged_df[merged_df['Day of Week'] == 5]['Unweighted_Engagement_Score'].dropna()\n",
+    "scores_sunday = merged_df[merged_df['Day of Week'] == 6]['Unweighted_Engagement_Score'].dropna()\n",
+    "\n",
+    "stat, p = kruskal(scores_monday, scores_tuesday, scores_wensday,scores_tursday, scores_friday, scores_saturday, scores_sunday)\n",
+    "print(f\"Kruskal-Wallis H Test: Statistic={stat}, p-value={p}\")"
    ]
   },
   {
