--- a/Final_code.ipynb
+++ b/Final_code.ipynb
@@ -13,7 +13,15 @@
     "import matplotlib.pyplot as plt\n",
     "import textstat\n",
     "import emoji\n",
-    "import re"
+    "import re\n",
+    "from pymer4.utils import get_resource_path\n",
+    "from pymer4.models import Lmer\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
+    "import scipy.stats as stats\n",
+    "from statsmodels.stats.diagnostic import lilliefors\n",
+    "from scipy.stats import kruskal\n",
+    "from scipy.stats import mannwhitneyu\n"
    ]
   },
   {
