--- a/sander_df.ipynb
+++ b/sander_df.ipynb
@@ -16,7 +16,7 @@
     "import re\n",
     "from pymer4.utils import get_resource_path\n",
     "from pymer4.models import Lmer\n",
-    "import statsmodels.api as sm\n",
+    "import statsmodels.api as smßs\n",
     "from statsmodels.formula.api import ols\n",
     "import scipy.stats as stats\n",
     "from statsmodels.stats.diagnostic import lilliefors\n",
@@ -2768,7 +2768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
